dashboard-ingress.yaml
# ---
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: dashboard-ingress
#   namespace: kubernetes-dashboard
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   rules:
#   - host: dashboard.local
#     http:
#       paths:
#       - path: /
#         backend:
#           serviceName: kubernetes-dashboard
#           servicePort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: dashboard.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 80
