dashboard-istio.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: k8s-dashboard-gw
  namespace: kube-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - dashboard.local

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: k8s-dashboard-vs
  namespace: kube-system
spec:
  hosts:
  - dashboard.local
  gateways:
  - k8s-dashboard-gw
  http:
  - route:
    - destination:
        host: kubernetes-dashboard.kube-system.svc.cluster.local
        port:
          number: 80
      weight: 100
